fix: update font size on mobile view

--- a/stylus/pages/home.styl
+++ b/stylus/pages/home.styl
@@ -1,6 +1,3 @@
-header
-  position fixed
-  background rgba(0,0,0,0.9)
 .hb
   background url('/img/header-himo.png') center bottom /cover no-repeat
   background-attachment fixed
@@ -8,7 +5,7 @@ header
     height 720px
 .header__logo
   img
-    width 60px
+    width 50px
 .header__action
   font bold 20px/30px $font-h
   display flex
@@ -30,8 +27,10 @@ header
     background url("/img/shape-triangle.png") no-repeat
     height 100%
     width 100%
+    background-size contain
     position absolute
-    top -55px
+    top -6%
+    left 0
     z-index 1
   &--right
     margin-left 70px
@@ -67,9 +66,9 @@ header
   &:not(:nth-child(1))
     margin-left 20px
   p
-    font 14px/24px $font
+    font 16px/24px $font
   h3
-    font 18px/26px $font-h
+    font 20px/26px $font-h
     margin 0
 .hq
   background url("/img/bg-himo-in-garden.jpg") center bottom / cover no-repeat
@@ -167,14 +166,14 @@ header
   .mi
     color $orange
   span
-    font 20px/30px $font-h
+    font 22px/30px $font-h
     letter-spacing -.5px
     margin-left 20px
     color #464646
 .hc__col
   width 50%
   h3
-    font 20px/30px $font-h
+    font 22px/30px $font-h
     margin-top 30px
 .hs
   img
@@ -254,8 +253,11 @@ header
     left -20px
   .hc__col__contact
     margin-top 20px
+    span
+      font 18px/24px $font-h
   .hc__col
     h3
+      font 18px/24px $font-h
       margin-top 20px
   .hs
     img
@@ -305,7 +307,7 @@ header
       font 24px/30px $font-h
   .hrl
     h3
-      font 14px/22px $font-h
+      font 16px/24px $font-h
     p
       margin 5px 0
   .hrl__header
